<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="205dp"
                android:layout_height="40dp"
                android:text="@string/matricule"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:text="@string/nom"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/num_ro"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/pay"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/pos"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/mois"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>

